--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.application.name=restful-web-services
 management.endpoints.web.exposure.include=*
 
 spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
