--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ management.endpoints.web.exposure.include=*
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
+
+#credentials to access the api
+spring.security.user.name=username
+spring.security.user.password=password
